--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,23 @@
 
   <dependencies>
 
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.7.30</version>
+	</dependency>
+
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>1.7.30</version>
+	    <scope>test</scope>
+	</dependency>
+
     <dependency>
        <groupId>net.sourceforge.tess4j</groupId>
        <artifactId>tess4j</artifactId>
-       <version>4.5.4</version>
+       <version>4.1.1</version>
     </dependency>
 
     <dependency>
