--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,11 @@
        <artifactId>itextpdf</artifactId>
        <version>5.5.13.2 </version>
     </dependency>
-
+    <dependency>
+       <groupId>org.im4java</groupId>
+       <artifactId>im4java</artifactId>
+       <version>1.4.0</version>
+    </dependency> 
   </dependencies>
 
   <build>
