--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,13 @@
        <artifactId>im4java</artifactId>
        <version>1.4.0</version>
     </dependency> 
+    <dependency>
+       <groupId>org.apache.pdfbox</groupId>
+       <artifactId>pdfbox</artifactId>
+       <version>2.0.24</version>
+    </dependency>
   </dependencies>
-
+    
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
